--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Stage 1: Build the React app
+# Stage 1: Build the Next.js app
 FROM node:20.18.0-alpine AS build
 
 WORKDIR /app
@@ -13,10 +13,10 @@ RUN npm install lucide-react
 # Copy the rest of the frontend source code
 COPY . .
 
-# Build the app
+# Build the Next.js app for production
 RUN npm run build
 
-# Stage 2: Serve the React app using Nginx
+# Stage 2: Serve the Next.js app using Nginx
 FROM nginx:stable-alpine
 
 # Remove default Nginx content and configuration
@@ -27,7 +27,7 @@ RUN rm -rf /usr/share/nginx/html/* \
 COPY nginx.conf /etc/nginx/conf.d/
 
 # Copy the build output to the Nginx html directory
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/.next /usr/share/nginx/html
 
 # Expose port 80
 EXPOSE 80
