--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
     "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
     "next": "^15.0.1",
