add dummy interface

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,7 +8,7 @@ COPY package*.json ./
 
 # Install project dependencies
 RUN npm install 
-RUN npm install lucide-react
+RUN npm install lucide-react react-markdown
 
 # Copy the rest of the frontend source code
 COPY . .
