--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,9 +9,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Proxy API requests to the backend
+    # Proxy API requests to the api-service
     location /api/ {
-        proxy_pass http://backend:8000/;
+        proxy_pass http://api-service:8001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
