--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@geist-ui/core": "^2.3.8",
     "@heroicons/react": "^2.1.5",
     "clsx": "^2.1.1",
+    "geist-icons": "^1.2.3",
     "next": "^15.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
