--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -25,7 +25,8 @@ WORKDIR /app
 COPY --from=build /app/package.json /app/package-lock.json ./
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/.next ./.next
-COPY --from=build /app/public ./public 
+COPY --from=build /app/public ./public
+COPY --from=build /app/src ./src 
 
 # Expose the Next.js port
 EXPOSE 3000
