--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "geist-icons": "^1.2.3",
     "next": "^15.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
