Last stable working version with fully functional Dockerized setup, reverse proxy, and tested frontend-backend API integration.

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,16 +2,19 @@ server {
     listen 80;
     server_name _;
 
-    root /usr/share/nginx/html;
-
-    # Serve frontend static files
+    # Route frontend requests
     location / {
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://next-frontend:3000;  # Forward requests to Next.js frontend
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 
-    # Proxy API requests to the backend
-    location /api/ {
-        proxy_pass http://backend:8000/;
+    # Route API requests to the backend
+    location / {
+        proxy_pass http://vllm-backend:8000;  # Forward requests to the backend
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
