--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,22 @@ services:
     depends_on:
       - backend
     ports:
-      - "8080:80"  # Expose port 80 of the container on port 8080 of the host
+      - "3000:3000"
     env_file:
       - ./frontend/.env
+    networks:
+      - app-network
+
+  nginx:
+    image: nginx:stable-alpine3.20
+    container_name: nginx-proxy
+    depends_on:
+      - frontend
+      - backend
+    ports:
+      - "8080:80"  # Expose Nginx on port 8080
+    volumes:
+      - ./frontend/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
       - app-network
 
