add vision modality to new branch

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,11 +1,18 @@
 # Dockerfile
-FROM python:3.9-slim
+FROM pytorch/pytorch:2.5.1-cuda12.4-cudnn9-devel
 
 WORKDIR /app
 
 COPY requirements.txt .
 
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y git build-essential poppler-utils
+
+# Install dependencies excluding torch
 RUN pip install --no-cache-dir -r requirements.txt
+
+RUN pip install flash-attn --no-build-isolation
 
 COPY . .
 
